# TinySynth

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml
debug_tool/: plot_waveform.py
doc/: ARCHITECTURE.md  ARCHITECTURE_GRAPH.md  MODULE_GUIDE.md  ROADMAP.md  SIGNAL_FLOW.md  TUTORIALS.md
include/audio/: AlsaWrapper.hpp
include/core/: GraphManager.hpp  IResetable.hpp  MidiEvent.hpp  SynthController.hpp
include/midi/processors/: AMidiProcessor.hpp  Arpeggiator.hpp  IMidiProcessor.hpp
include/midi/sources/: AMidiEventSource.hpp  AlsaMidiSource.hpp  IMidiEventSource.hpp
include/module/: AModule.hpp  IModule.hpp
include/module/IO/: AudioOutput.hpp
include/module/generator/: LFO.hpp  Oscillator.hpp  Waveform.hpp
include/module/processing/: Mixer.hpp  VCA.hpp  VCF.hpp
include/module/utility/: ADSRModule.hpp  Probe.hpp
include/preset/: APreset.hpp  IPreset.hpp  bass.hpp  pianoSynth.hpp
include/utility/: ADSR.hpp
source/audio/: AlsaWrapper.cpp
source/core/: GraphManager.cpp  SynthController.cpp
source/midi/: AlsaMidiSource.cpp  Arpeggiator.cpp
source/module/IO/: AudioOutput.cpp
source/module/generator/: LFO.cpp  Oscilator.cpp
source/module/processing/: Mixer.cpp  VCA.cpp  VCF.cpp
source/module/utility/: ADSRModule.cpp  Probe.cpp
source/preset/: APreset.cpp  bass.cpp  pianoSynth.cpp
source/utility/: ADSR.cpp
